--- a/03b_data_aggregation.Rmd
+++ b/03b_data_aggregation.Rmd
@@ -185,9 +185,7 @@ resave(m3_read_count_Rjoined_object, file = "RDataRDS/saved_objects.RData")
 load("RDataRDS/Rjoined_objects.RData", verbose = T)
 ```
 
-
-
-# Creating Pyloseq Objects {#data-objects}
+# Creating Pyloseq Objects {#phyloseq-objects}
 
 ## Prerequisite
 - Tidy metadata created in [PART 1](https://github.com/tmbuza/iMAP-part1/).
@@ -206,8 +204,7 @@ cat("\nOtu and taxonomy tables\n\n")
 load("RDataRDS/otutaxonomy_objects.RData", verbose = T)
 ```
 
-## Object by data source
-### Using `mothur` output {#mothur-physeq}
+## Using `mothur` output {#mothur-physeq}
 ```{r}
 ps_mo_metadata <- mo_metadata %>% tibble::column_to_rownames("sample_id") %>% 
   sample_data(ps_mo_metadata)
@@ -234,7 +231,7 @@ Summarizing `mothur` phyloseq object
 microbiome::summarize_phyloseq(ps_mo_raw)
 ```
 
-### Using `qiime2` output {#qiime2-physeq}
+## Using `qiime2` output {#qiime2-physeq}
 ```{r}
 ps_q2_metadata <- q2_metadata %>% 
   rename(sample_id = "sample-id") %>% 
@@ -264,7 +261,7 @@ Summarizing `qiime2` phyloseq object
 microbiome::summarize_phyloseq(ps_q2_raw)
 ```
 
-### Using `metaphlan` output {#metaphlan-physeq}
+## Using `metaphlan` output {#metaphlan-physeq}
 ```{r}
 ps_m3_metadata <- m3_metadata %>% tibble::column_to_rownames("sample_id") %>% 
   sample_data(ps_m3_metadata)
