--- a/03b_data_joining.Rmd
+++ b/03b_data_joining.Rmd
@@ -1,4 +1,6 @@
-# Creating joined R Objects {#r-objects}
+# Data Joining
+
+## Creating joined R objects {#r-objects}
 
 ```{block, type="tmbinfo", echo=T}
 > Creating an object that joins the metadata, microbial abundance, and taxonomy data simplifies the downstream analyses. The composite objects are in long-format and enables us to do any type of analysis we desire when exploring the results associated with **16S rRNA gene** or **metagenomics** sequencing data.
@@ -185,14 +187,14 @@ resave(m3_read_count_Rjoined_object, file = "RDataRDS/saved_objects.RData")
 load("RDataRDS/Rjoined_objects.RData", verbose = T)
 ```
 
-# Creating Pyloseq Objects {#phyloseq-objects}
+## Creating joined pyloseq objects {#phyloseq-objects}
 
-## Prerequisite
+### Prerequisite
 - Tidy metadata created in [PART 1](https://github.com/tmbuza/iMAP-part1/).
 - Tidy microbial abundance table created in [PART 2](https://github.com/tmbuza/iMAP-part2/).
 - Tidy taxonomy table created in [PART 2](https://github.com/tmbuza/iMAP-part2/).
 
-## Load libraries and data
+### Load libraries and data
 ```{r message=FALSE, warning=FALSE}
 source("R/common.R")
 library(tidyverse)
@@ -204,7 +206,7 @@ cat("\nOtu and taxonomy tables\n\n")
 load("RDataRDS/otutaxonomy_objects.RData", verbose = T)
 ```
 
-## Using `mothur` output {#mothur-physeq}
+### Using `mothur` output {#mothur-physeq}
 ```{r}
 ps_mo_metadata <- mo_metadata %>% tibble::column_to_rownames("sample_id") %>% 
   sample_data(ps_mo_metadata)
@@ -231,7 +233,7 @@ Summarizing `mothur` phyloseq object
 microbiome::summarize_phyloseq(ps_mo_raw)
 ```
 
-## Using `qiime2` output {#qiime2-physeq}
+### Using `qiime2` output {#qiime2-physeq}
 ```{r}
 ps_q2_metadata <- q2_metadata %>% 
   rename(sample_id = "sample-id") %>% 
@@ -261,7 +263,7 @@ Summarizing `qiime2` phyloseq object
 microbiome::summarize_phyloseq(ps_q2_raw)
 ```
 
-## Using `metaphlan` output {#metaphlan-physeq}
+### Using `metaphlan` output {#metaphlan-physeq}
 ```{r}
 ps_m3_metadata <- m3_metadata %>% tibble::column_to_rownames("sample_id") %>% 
   sample_data(ps_m3_metadata)
@@ -285,7 +287,7 @@ resave(ps_m3_raw, ps_m3_rel,  file = "RDataRDS/phyloseq_objects.RData")
 ```
 
 
-## Review saved phyloseq objects
+### Review saved phyloseq objects
 ```{r}
 load("RDataRDS/phyloseq_objects.RData", verbose = T)
 ```
